Fixed uuencode algorithm for hashing